--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,12 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+   
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #5e3a85;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  background-color: #f2eb6b;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border: 2px solid purple;
+  border-radius: 25px;
+  width: 300px;
+  height: 50px;
+  outline: 0;
+}
+
+button:hover {
+  background-color: #d32b2b;
+  cursor: pointer;
+}
+
